<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:onClick="go"
        android:text="Go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvFromDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="From: "
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFromDateTime"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/hintFormDateTime"
        android:id="@+id/etFromDateTime"
        android:layout_width="265dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="date|time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvLng"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="Longitude:"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLng"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/hintToDateTime"
        android:id="@+id/etToDateTime"
        android:layout_width="265dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="date|time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFromDateTime"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvToDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="To: "
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etToDateTime"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvKeywords"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:text="Keywords: "
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etKeywords"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/hintKeywords"
        android:id="@+id/etKeywords"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLng"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="45dp"
        android:onClick="cancel"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:text="Latitude:"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etLat"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:hint="@string/hintLat"
        android:id="@+id/etLat"
        android:layout_width="265dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etToDateTime"
        android:autofillHints="" />

    <EditText
        android:hint="@string/hintLng"
        android:id="@+id/etLng"
        android:layout_width="265dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLat"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>