...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <Button
        android:id="@+id/btSearchMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="24dp"
        android:onClick="sendMessage"
        android:text="@string/button_search"
...
